--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                     <div class="add">
                         <p>R$10.00</p>
-                        <div data-name="Bolinho" data-price="10.00">ADD</div>
+                        <div class="add-btn" data-name="Bolinho" data-price="10.00">ADD</div>
                     </div>
                 </div>
             </div>
@@ -33,12 +33,12 @@
             <div class="produto">
                 <img src="img/logo.jpg">
                 <div class="descricao">
-                    <span>Bolinho</span>
+                    <span>Brigadeiro</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit error</p>
 
                     <div class="add">
-                        <p>R$10.00</p>
-                        <div data-name="Bolinho" data-price="10.00">ADD</div>
+                        <p>R$2.00</p>
+                        <div class="add-btn" data-name="Brigradeiro" data-price="2.00">ADD</div>
                     </div>
                 </div>
             </div>
@@ -46,50 +46,39 @@
             <div class="produto">
                 <img src="img/logo.jpg">
                 <div class="descricao">
-                    <span>Bolinho</span>
+                    <span>Torta</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit error</p>
 
                     <div class="add">
-                        <p>R$10.00</p>
-                        <div data-name="Bolinho" data-price="10.00">ADD</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="produto">
-                <img src="img/logo.jpg">
-                <div class="descricao">
-                    <span>Bolinho</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit error</p>
-
-                    <div class="add">
-                        <p>R$10.00</p>
-                        <div data-name="Bolinho" data-price="10.00">ADD</div>
+                        <p>R$5.00</p>
+                        <div class="add-btn" data-name="Torta" data-price="5.00">ADD</div>
                     </div>
                 </div>
             </div>
         </main>
     </div>
 
-    <div class="modal-bg">
+    <div class="modal-bg" id="modal">
         <div class="modal">
             <h2>Meu carrinho</h2>
             <div id="cart-items"></div>
             <p>Total: <span id="cart-total">0.00</span></p>
             <p style="margin-top: 25px;">Endereço de entrega:</p>
             <input type="text" placeholder="Digite seu endereço" id="endereco">
-            <p style="color: red; display: none;">Digite seu endereço completo</p>
+            <p style="color: red; display: none;" id="endereco-alerta">Digite seu endereço completo</p>
             <div style="display: flex; align-items: center; justify-content: space-between; margin-top: 15px; width: 100%; flex-direction: row;">
-                <div class="fechar" style="cursor: pointer;">Fechar</div>
-                <div class="finalizar">Finalizar pedido</div>
+                <div class="fechar" id="fechar" style="cursor: pointer;">Fechar</div>
+                <div class="finalizar" id="finalizar">Finalizar pedido</div>
             </div>
         </div>
     </div>
 
     <footer>
         <div id="cart-btn">
-            (<span id="contador">2</span>) Veja meu carrinho
+            (<span id="contador">0</span>) Veja meu carrinho
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
